--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,62 +1,42 @@
-<div class="card" *ngIf="product">
+<div class="card">
   <div class="card-header">
-    {{ pageTitle + ": " + product.productName }}
+    {{ pageTitle }}
   </div>
 
   <div class="card-body">
     <div class="row">
-      <div class="col-md-8">
-        <div class="row">
-          <div class="col-md-4">Name:</div>
-          <div class="col-md-8">{{ product.productName }}</div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">Code:</div>
-          <div class="col-md-8">
-            {{ product.productCode | lowercase | convertToSpaces: "-" }}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">Description:</div>
-          <div class="col-md-8">{{ product.description }}</div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">Availability:</div>
-          <div class="col-md-8">{{ product.releaseDate }}</div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">Price:</div>
-          <div class="col-md-8">
-            {{ product.price | currency: "USD":"symbol" }}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">5 Star Rating:</div>
-          <div class="col-md-8">
-            <pm-star [rating]="product.starRating"> </pm-star>
-          </div>
-        </div>
-      </div>
-
+      <div class="col-md-2">Filtrar:</div>
       <div class="col-md-4">
-        <img
-          class="center-block img-responsive"
-          [style.width.px]="200"
-          [style.margin.px]="2"
-          [src]="product.imageUrl"
-          [title]="product.productName"
-        />
+        <input type="text" name="" id="" />
       </div>
     </div>
   </div>
 
-  <div class="card-footer">
-    <button
-      class="btn btn-outline-secondary"
-      (click)="onBack()"
-      style="width: 80px"
-    >
-      <i class="fa fa-chevron-left"></i> Back
-    </button>
+  <div class="table-responsive">
+    <table class="table" *ngIf="products && products.length">
+      <thead>
+        <tr>
+          <th>
+            <button class="btn btn-primary">Mostrar Imagen</button>
+          </th>
+          <th>Producto</th>
+          <th>Código</th>
+          <th>Disponible</th>
+          <th>Descripción</th>
+          <th>Precio</th>
+          <th>Puntuación</th>
+        </tr>
+        <tr *ngFor="let product of products">
+            <td></td>
+            <td>{{ product.productName }}</td>
+            <td>{{ product.productCode }}</td>
+            <td>{{ product.releaseDate }}</td>
+            <td>{{ product.description }}</td>
+            <td>{{ product.price }}</td>
+            <td>{{ product.starRating }}</td>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
 </div>
