--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -34,7 +34,9 @@
           <th>Precio</th>
           <th>Puntuación</th>
         </tr>
-        <tr *ngFor="let product of products">
+      </thead>
+      <tbody>
+        <tr *ngFor="let product of filteredProducts">
           <td>
             <img
               *ngIf="showImage"
@@ -45,16 +47,15 @@
             />
           </td>
           <td>{{ product.productName }}</td>
-          <td>{{ product.productCode | lowercase }}</td>
+          <td>{{ product.productCode | lowercase | convertToSpaces: "-" }}</td>
           <td>{{ product.releaseDate }}</td>
           <td>{{ product.description }}</td>
           <td>
-            {{ product.price | currency:'ARS':'symbol' | uppercase }}
+            {{ product.price | currency: "ARS":"symbol" | uppercase }}
           </td>
           <td>{{ product.starRating }}</td>
         </tr>
-      </thead>
-      <tbody></tbody>
+      </tbody>
     </table>
   </div>
 </div>
