--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -53,7 +53,8 @@
           <td>
             {{ product.price | currency: "ARS":"symbol" | uppercase }}
           </td>
-          <td>{{ product.starRating }}</td>
+          <td><pm-star [rating]="product.starRating" 
+            (ratingClicked)="onRatingClicked($event)"></pm-star></td>
         </tr>
       </tbody>
     </table>
