--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -2,4 +2,13 @@
   <div class="card-header">
     {{ pageTitle + ": " + product?.productName }}
   </div>
+  <div class="card footer">
+    <button
+      class="btn btn-outline-secondary"
+      (click)="onBack()"
+      style="width: 100px"
+    >
+      <i class="fa fa-chevron-left"></i> Volver
+    </button>
+  </div>
 </div>
