--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -46,15 +46,23 @@
               [style.margin.px]="imageMargin"
             />
           </td>
-          <td>{{ product.productName }}</td>
+          <td>
+            <a [routerLink]="['/products', product.productId]">{{
+              product.productName
+            }}</a>
+          </td>
           <td>{{ product.productCode | lowercase | convertToSpaces: "-" }}</td>
           <td>{{ product.releaseDate }}</td>
           <td>{{ product.description }}</td>
           <td>
             {{ product.price | currency: "ARS":"symbol" | uppercase }}
           </td>
-          <td><pm-star [rating]="product.starRating" 
-            (ratingClicked)="onRatingClicked($event)"></pm-star></td>
+          <td>
+            <pm-star
+              [rating]="product.starRating"
+              (ratingClicked)="onRatingClicked($event)"
+            ></pm-star>
+          </td>
         </tr>
       </tbody>
     </table>
